fix:恒玄编译依赖debug api新增对应文件编译
Signed-off-by: Kiita <zhanyan@huawei.com>
Change-Id: I0f217dd613f41a90db78e9e3b6c89d4286a9f5e5

--- a/hals/mbedtls/BUILD.gn
+++ b/hals/mbedtls/BUILD.gn
@@ -29,7 +29,7 @@ lite_library("mbedtls_static") {
   target_type = "static_library"
   public_configs = [ ":mbedtls_config" ]
   sources = MBEDTLS_SOURCES - [ "$MBEDTLSDIR/library/entropy_poll.c" ] +
-            [ "library/entropy_poll.c" ]
+            [ "library/entropy_poll.c" ] + [ "$MBEDTLSDIR/library/debug.c" ]
 }
 
 group("mbedtls") {
