feat: add L0 hdf config macro parse
Signed-off-by: zhang <zhangfengxi@huawei.com>

--- a/bes2600/liteos_m/components/drivers/display/hal/BUILD.gn
+++ b/bes2600/liteos_m/components/drivers/display/hal/BUILD.gn
@@ -31,4 +31,7 @@ hdf_driver("hal_display") {
     "//drivers/peripheral/base",
     "//drivers/framework/support/platform/include/mipi",
   ]
+  if (defined(LOSCFG_DRIVERS_HDF_CONFIG_MACRO)) {
+    deps = [ "//device/board/fnlink/shields" ]
+  }
 }
