--- a/bes2600w/components/utils/BUILD.gn
+++ b/bes2600w/components/utils/BUILD.gn
@@ -48,7 +48,17 @@ static_library("sys_adapter") {
     "//base/hiviewdfx/hilog_lite/frameworks/mini",
     "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog_lite",
     "//drivers/framework/core/common/include/manager",
+    "//foundation/communication/bluetooth/interfaces/innerkits/native_c/include/",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/modules/rwip/api/",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_app_v2/app_main",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bt_app",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/ip/ble/hl/api/",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/modules/common/api/",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/ip/ble/hl/inc/",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/config/best2600w_liteos/",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bt_if_enhanced/inc/",
   ]
 
   cflags = [ "-DLOG_FMT_MAX_LEN=128" ]
+  cflags += [ "-DBES_BLE_ACTIVITY_MAX=9" ]
 }
