device release: bsp-9db55f9f0 device-0c51783d
Signed-off-by: zetingxu <zetingxu@bestechnic.com>
Change-Id: Ifc2545b9b0f2f0c00f483e67a53094dccbac49ad

--- a/bes2600w/hals/communication/wifi_lite/wifiservice/BUILD.gn
+++ b/bes2600w/hals/communication/wifi_lite/wifiservice/BUILD.gn
@@ -12,6 +12,11 @@
 # limitations under the License.
 
 import("//device/bestechnic/bes2600w/components/components.gni")
+
+declare_args() {
+  bes_wifi_storage_enable = true
+}
+
 static_library("wifiservice") {
   sources = [
     "wifi_device.c",
@@ -30,5 +35,14 @@ static_library("wifiservice") {
     defines = [
     "SOFTAP_ENABLE",
     ]
+  }
+
+  if (bes_wifi_storage_enable) {
+    defines += [
+      "WIFI_STORAGE",
+      #"WIFI_SECURITY_STORAGE",
+    ]
+    sources += [ "wifi_storage.c" ]
+    deps += [ "//third_party/mbedtls:mbedtls_static" ]
   }
 }
