bsp release: d60049ef & 458b54ea0 support 32m flash and iotflash use DATA partition
Signed-off-by: zetingxu <zetingxu@bestechnic.com>
Change-Id: I34b93540300dc7b48137ecd546fc67b8afeee038

--- a/bes2600w/components/drivers/flash/BUILD.gn
+++ b/bes2600w/components/drivers/flash/BUILD.gn
@@ -30,6 +30,7 @@ static_library("flash") {
     "//device/bestechnic/${board_name}/sdk_liteos/bsp/platform/hal",
     "//device/bestechnic/${board_name}/sdk_liteos/bsp/platform/drivers/ana",
     "//device/bestechnic/${board_name}/sdk_liteos/bsp/utils/crc32",
+    "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/norflash_api",
     "//device/bestechnic/${board_name}/sdk_liteos/bsp/include/rtos/liteos/liteos_m/kal/cmsis",
     "//base/update/ota_lite/hals",
     "//base/update/ota_lite/interfaces/kits",
