update: 031150c9 &5382d9cce: fix remap and ble cfg net
Signed-off-by: zetingxu <zetingxu@bestechnic.com>
Change-Id: Ic00d5ae6f0c649b3e7f52eed16a92426a4d12070

--- a/bes2600w/components/utils/BUILD.gn
+++ b/bes2600w/components/utils/BUILD.gn
@@ -57,6 +57,7 @@ static_library("sys_adapter") {
     "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/ble_stack_v2/ip/ble/hl/inc/",
     "//device/bestechnic/${board_name}/sdk_liteos/bsp/config/best2600w_liteos/",
     "//device/bestechnic/${board_name}/sdk_liteos/bsp/services/bt_if_enhanced/inc/",
+    "//device/bestechnic/bes2600w/components/drivers/flash/",
   ]
 
   cflags = [ "-DLOG_FMT_MAX_LEN=128" ]
