do include binaries and libraries under bes2600/liteos_m/sdk/bsp/out/
Signed-off-by: Caoruihong <crh.cao@huawei.com>

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ write_flash_gui*
 
 # configuration file
 # *.ini
+
+# Except these files
+!bes2600/liteos_m/sdk/bsp/out/**/*.bin
+!bes2600/liteos_m/sdk/bsp/out/**/*.a
