fix: 适配liteos-m文件系统最新代码
【背景】适配liteos-m文件系统最新代码

【修改方案】
    1, device目录删除对littlefs的直接依赖
    2, 适配liteos-m vfs初始化函数

close: #I5CYKI

Signed-off-by: leonchan5 <chenwei26@huawei.com>

--- a/bes2600/liteos_m/components/fs/BUILD.gn
+++ b/bes2600/liteos_m/components/fs/BUILD.gn
@@ -18,10 +18,7 @@ config("public") {
 }
 
 hdf_driver("fs_adapter") {
-  sources = [
-    "fs_init.c",
-    "littlefs.c",
-  ]
+  sources = [ "fs_init.c" ]
 
   deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static" ]
   if (defined(LOSCFG_DRIVERS_HDF_CONFIG_MACRO)) {
