--- a/bes2600/liteos_m/components/ui/BUILD.gn
+++ b/bes2600/liteos_m/components/ui/BUILD.gn
@@ -30,7 +30,7 @@ hdf_driver("ui_adapter") {
   ]
 
   public_configs = [ ":public" ]
-  public_deps = [ "//foundation/graphic/ui:ui" ]
+  public_deps = [ "//foundation/arkui/ui_lite:ui" ]
   if (bes_ace_enable) {
     defines = [ "ENABLE_ACE" ]
     public_deps += [ "//foundation/arkui/ace_engine_lite/frameworks:ace_lite" ]
@@ -39,7 +39,7 @@ hdf_driver("ui_adapter") {
   include_dirs = [
     "//drivers/peripheral/display/interfaces/include",
     "//drivers/peripheral/base",
-    "//foundation/graphic/ui/frameworks",
+    "//foundation/arkui/ui_lite/frameworks",
     "//third_party/freetype/include",
   ]
 }
